<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="false"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:weightSum="4"
        android:background="@drawable/gradient_midnight_lighter"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/imgProfilAktif"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="22dp"
                android:layout_marginTop="18dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_user"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/welcome_to_github"
                    android:textSize="24sp"
                    android:textFontWeight="600"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/where_the_world_builds_software"
                    android:textSize="18sp"
                    android:textFontWeight="400"
                    android:textColor="@color/colorWhite"/>


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:elevation="36dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/card_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:queryHint="@string/search_hint"
                    app:searchIcon="@drawable/ic_search_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="36dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tvLabelShowKeyword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/showing_results_for"
                    android:textSize="14sp"
                    android:textFontWeight="400"
                    android:textColor="@color/colorBrightPurple"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintTop_toBottomOf="@id/searchView"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <ImageView
                    android:id="@+id/imgKeteranganSearch"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/svg_search"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tvKeteranganSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/waiting_to_search"
                    android:textSize="14sp"
                    android:textFontWeight="400"
                    android:textColor="@color/colorGrayBlack"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintTop_toBottomOf="@id/imgKeteranganSearch"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewUser"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelShowKeyword" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>
