<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DetailUserDataFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="405dp">

                <LinearLayout
                    android:background="@drawable/gradient_midnight"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgFotoUser"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:src="@drawable/app_github_octocat"
                        android:layout_marginTop="40dp"/>

                    <TextView
                        android:id="@+id/tvNama"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textFontWeight="600"
                        android:layout_marginTop="15dp"/>

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textFontWeight="400"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/iconBack"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="22dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

                <ImageView
                    android:id="@+id/iconShare"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="18dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_share_1"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="275dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/repository"
                                android:textSize="16sp"/>

                            <TextView
                                android:id="@+id/tvRepository"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:paddingTop="10dp"
                                android:textColor="@color/colorBrightPurple"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textSize="16sp"/>

                            <TextView
                                android:id="@+id/tvFollowers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:paddingTop="10dp"
                                android:textColor="@color/colorBrightPurple"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="16sp"/>

                            <TextView
                                android:id="@+id/tvFollowing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:paddingTop="10dp"
                                android:textColor="@color/colorBrightPurple"/>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="36dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:paddingLeft="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_baseline_business_24"/>

                        <TextView
                            android:id="@+id/tvCompany"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="15dp"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            android:text="-"
                            android:textFontWeight="500"/>

                    </LinearLayout>

                    <LinearLayout
                        android:paddingLeft="25dp"
                        android:layout_marginTop="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_baseline_location_on_24"/>

                        <TextView
                            android:id="@+id/tvLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="15dp"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            android:text="-"
                            android:textFontWeight="500"/>
                    </LinearLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonOpenGithub"
                android:textColor="@color/colorWhite"
                android:background="@drawable/gradient_buttonstyle"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"

                android:text="@string/open_at_github"
                android:textFontWeight="500"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>